--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,9 @@ body {
 }
 
 
-.full-screen-home {
+.full-screen-home,
+.full-screen-projects,
+.full-screen-contact {
     background-color: #f0f4f8;
     display: flex;
     justify-content: center;
@@ -189,7 +191,6 @@ body {
 
 .img:hover {
     transform: scale(1.1);
-    /* Scale up by 20% */
 }
 
 .profile-photo {
@@ -204,7 +205,6 @@ body {
 
 .profile-photo:hover {
     transform: scale(1.1);
-    /* Scale up by 20% */
 }
 
 
@@ -319,7 +319,8 @@ body {
 
 
 
-.full-screen-about {
+.full-screen-about,
+.full-screen-skills {
     background-color: transparent;
     display: flex;
     flex-direction: column;
@@ -376,7 +377,7 @@ body {
     right: -280px;
     top: 90px;
     font-size: 19px;
-    margin: 0 auto; 
+    margin: 0 auto;
     max-width: 550px;
     font-family: 'Gramatika Regular'
 }
@@ -394,66 +395,227 @@ li {
 
 @keyframes zoomIn {
     0% {
-        transform: scale(0.5); 
-        opacity: 0; 
+        transform: scale(0.5);
+        opacity: 0;
     }
+
     100% {
-        transform: scale(1); 
-        opacity: 1; 
+        transform: scale(1);
+        opacity: 1;
     }
 }
 
-.pop-in {
+.pop-in,
+.projects,
+.skills {
     position: relative;
-    opacity: 0; 
-    transform: scale(0.5); 
+    opacity: 0;
+    transform: scale(0.5);
     transition: transform 0.5s ease-out, opacity 0.5s ease-out;
 }
 
-.pop-in-visible {
-    animation: zoomIn 1s forwards;
+.pop-in-visible,
+.projects-visible,
+.skills-visible {
+    opacity: 1;
+    transform: scale(1);
+    transition: transform 0.5s ease-out, opacity 0.5s ease-out;
 }
 
 
+.proj {
+    position: absolute;
+    margin: 0 93px 550px 0;
+    font-size: 32px;
+}
 
+.projects {
+    margin: 250px 0 0 60px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 60px;
+}
 
-.full-screen-projects {
+.vehicle,
+.portfolio,
+.dictionary {
+    width: 340px;
+    height: 400px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(215, 204, 204, 0.885);
+}
+
+.vehicle:hover,
+.portfolio:hover,
+.dictionary:hover {
+    box-shadow: 0 0 5px rgba(161, 161, 161, 0.819);
+}
+
+.accessories {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 80px;
+    font-size: 40px;
+    margin-top: 15px;
+}
+
+.git-proj,
+.view {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    width: 40px;
+    height: 40px;
+    font-size: 24px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    text-decoration: none;
+}
+
+.git-proj:hover,
+.view:hover {
+    background-color: #dc143c;
+    border-radius: 80px;
+    color: #ffffff;
+    text-decoration: none;
+
+}
+
+.proj-img {
+    width: 300px;
+    height: 170px;
+    border-radius: 10px;
+    margin: 15px 0 0 20px;
+}
+
+.proj-title {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+}
+
+.proj-desc {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    color: #78777b;
+    flex-wrap: wrap;
+    font-size: 12px;
+    width: 300px;
+    margin: 10px auto;
+
+}
+
+.skill-header {
+    position: absolute;
+    margin: 0 0 400px 310px;
+    font-size: 32px;
+}
+
+.skills {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: flex-start;
+    width: 900px;
+    margin: 100px 0 0 20px;
+}
+
+.skill {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.skill img {
+    width: 110px;
+    height: 120px;
     background-color: #f0f4f8;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    height: 100vh;
-    padding-left: 300px;
-    padding-bottom: 200px;
+    padding: 20px;
+    border-radius: 5px;
+    object-fit: contain;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.full-screen-skills {
-    background-color: #ffffff00;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    height: 100vh;
-    padding-left: 300px;
-    padding-bottom: 200px;
+.skill span {
+    position: absolute;
+    bottom: 5px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 12px;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-weight: 500;
 }
 
-.full-screen-contact {
-    background-color: #f0f4f8;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    height: 100vh;
-    padding-left: 300px;
-    padding-bottom: 200px;
+.skill img:hover {
+    background-color: white;
+    box-shadow: 0 0 5px rgba(215, 204, 204, 0.885);
 }
 
+.contact-header {
+    position: absolute;
+    margin: 0 100px 550px 0;
+    font-size: 32px;
+}
+
+.contact-img {
+    position: absolute;
+    width: 700px;
+    transform: translate(-85%, -48%);
+}
+
+.contact-img img {
+    width: 100%;
+    height: auto;
+}
+
+.contact-msg {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 0 0 0 100px;
+    transform: translateY(-37%);
+}
+
+.contact-social{
+    display: flex;
+    position: absolute;
+    margin: 0 0 0 105px;
+    transform: translateY(-569%);
+    gap: 20px;
+}
+
+.contact-social a{
+    display: flex;
+    width: 100px;
+    gap: 5px;
+    height: 35px;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+.contact-social a:hover, .contact-msg button:hover{
+    box-shadow: 0 0 5px rgb(69, 59, 59);    
+    text-decoration: none;
+}
 
 section {
     border-bottom: 1px solid #ddd;
     padding: 40px;
+    justify-content: flex-start;
 }
 
 footer {
